@@ -1,77 +1,0 @@
-#!/usr/local/bin/perl
-#************************************************************************
-#*   IRC - Internet Relay Chat, ircd/crypt/crypter
-#*   Copyright (C) 1991 Sean Batt
-#*
-#*   This program is free software; you can redistribute it and/or modify
-#*   it under the terms of the GNU General Public License as published by
-#*   the Free Software Foundation; either version 1, or (at your option)
-#*   any later version.
-#*
-#*   This program is distributed in the hope that it will be useful,
-#*   but WITHOUT ANY WARRANTY; without even the implied warranty of
-#*   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#*   GNU General Public License for more details.
-#*
-#*   You should have received a copy of the GNU General Public License
-#*   along with this program; if not, write to the Free Software
-#*   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
-#*
-#*   $Id$
-#*
-#*/
-
-#From Sean Batt sean@coombs.anu.edu.au
-#
-#Temporary output file
-#
-$tmpfile = "/tmp/ircd.conf.tmp";
-
-#
-#Original ircd.conf file
-#
-$ircdconf = @ARGV[0];
-
-$ircdout = "IRCDOUT";
-
-print "crypting ",$ircdconf,"\n";
-@saltset = ('a' .. 'z', 'A' .. 'Z', '0' .. '9', '.', '/');
-
-umask(0077);
-open ($ircdout, ">/tmp/ircd.conf.tmp") || die "open $!";
-
-while ($text = <>) {
-#if its not an "O" line we can ignore it
-if ($text =~ /^o/i) {
-    chop($text);
-    @oline = split(':', $text);
-    $salt = $saltset[rand(time)%64].$saltset[(rand(time)>>6)%64];
-    $oline[2] = crypt(@oline[2], $salt);
-    print ($ircdout join(':',@oline)."\n");
-}
-elsif ($text =~ /^n/i) {
-    chop($text);
-    @nline = split(':', $text);
-    $salt = $saltset[rand(time)%64].$saltset[(rand(time)>>6)%64];
-    $nline[2] = crypt(@nline[2], $salt);
-    print ($ircdout join(':',@nline)."\n");
-}
-elsif ($text =~ /^x/i) {
-    chop($text);
-    @xline = split(':', $text);
-    $salt1 = $saltset[rand(time)%64].$saltset[(rand(time)>>6)%64];
-    $salt2 = $saltset[rand(time)%64].$saltset[(rand(time)>>6)%64];
-    $xline[1] = crypt(@xline[1], $salt1);
-    $xline[2] = crypt(@xline[2], $salt2);
-    print ($ircdout join(':',@xline)."\n");
-}
-else {
-    print $ircdout "$text";
-}
-}
-close ($ircdout);
-close ($ircdin);
-print "/bin/cp ",$tmpfile," ",$ircdconf,"\n";
-(fork()==0) ? exec("/bin/cp", $tmpfile, $ircdconf) : wait;
-
-#unlink($tmpfile);
