@@ -975,3 +975,4 @@ seen. gmtime warning still there
 - Fixed a ton of module v3 problems (cause: Stskeeps is an idiot)
 - Yes, even more module v3 bugfixes
 - Module v3 bugfixes. cause: codemastr lack find n replace skill
+- Moved the mkpasswd program into ./unreal mkpasswd <method> <password>
